--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,41 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version "$orgSpringframeworkBootVersion"
-	id 'io.spring.dependency-management' version "$ioSpringDependencyManagementVersion"
+    id 'java'
+    id 'org.springframework.boot' version "$orgSpringframeworkBootVersion"
+    id 'io.spring.dependency-management' version "$ioSpringDependencyManagementVersion"
 }
 
 group = 'net.ersted'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+    sourceCompatibility = '21'
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 
-	implementation "org.postgresql:r2dbc-postgresql:$orgPostgresqlR2dbcPostgresql"
-	implementation "org.postgresql:postgresql:$orgPostgresqlPostgresql"
+    implementation "org.postgresql:r2dbc-postgresql:$orgPostgresqlR2dbcPostgresql"
+    implementation "org.postgresql:postgresql:$orgPostgresqlPostgresql"
 
-	implementation "org.flywaydb:flyway-core:$orgFlywaydbFlywayCore"
-	implementation "org.flywaydb:flyway-database-postgresql:$orgFlywaydbFlywayDatabasePostgresql"
+    implementation "org.flywaydb:flyway-core:$orgFlywaydbFlywayCore"
+    implementation "org.flywaydb:flyway-database-postgresql:$orgFlywaydbFlywayDatabasePostgresql"
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
+    implementation "org.projectlombok:lombok:$orgProjectlombokLombok"
+    compileOnly("org.projectlombok:lombok:$orgProjectlombokLombok")
+    annotationProcessor "org.projectlombok:lombok:$orgProjectlombokLombok"
+
+    implementation "org.mapstruct:mapstruct:$orgMapstructMapstruct"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$orgMapstructMapstructProcessor"
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
