--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ orgPostgresqlR2dbcPostgresql=1.0.4.RELEASE
 orgPostgresqlPostgresql=42.7.3
 orgFlywaydbFlywayCore=10.10.0
 orgFlywaydbFlywayDatabasePostgresql=10.10.0
+orgProjectlombokLombok=1.18.30
+orgMapstructMapstruct=1.5.5.Final
+orgMapstructMapstructProcessor=1.5.5.Final
