--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$orgMapstructMapstruct"
     annotationProcessor "org.mapstruct:mapstruct-processor:$orgMapstructMapstructProcessor"
 
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
 }
