--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ orgFlywaydbFlywayDatabasePostgresql=10.10.0
 orgProjectlombokLombok=1.18.30
 orgMapstructMapstruct=1.5.5.Final
 orgMapstructMapstructProcessor=1.5.5.Final
+testcontainerPostgresqlVersion=1.19.7
+jacksonDataFormatXmlVersion=2.17.0
